[project]
name = "f1_data_visualisation"
version = "0.1"
description = "Library for visualising F1 data"
readme = "README.md"
dynamic = ["dependencies"]
requires-python = "^3.12"

[[project.authors]]
name = "Nuno Ferreira"
email = "nuno.ferreira985@gmail.com"

[tool.poetry]
packages = [
    { include = "f1_data_visualisation" },
]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
